2005-04-28  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* files/msgfile.cc, shapes/items.cc: strip CR's from end of line

2005-04-26  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* usecode/ucinternal.*: reset all statics when loading

2005-04-20    <jeff@mini.nerble.net>

	* usecode/ucinternal.cc: Increase max. # of global flags to 2048.
	* usecode/compiler/ucmain.cc: Look up include dir from UCC_INCLUDE
	env. var.

2005-03-27    <jeff@mini.nerble.net>

	* cheat.cc (Cheat): Ctrl-arrow keys will move entire chunks when
	in "Select chunks" mode.

2005-03-12    <jeff@mini.nerble.net>

	* data/exultmsg.txt: Applied "international support" patch from
	dk@pollodigomma.net.

2005-02-18    <jeff@mini.nerble.net>

	* gumps/Notebook_gump.cc: Add text automatically from
	"autonotes.txt" when a global flag is set.

2005-02-14	Darke <darkepaw@users.sf.net>
	* hash_utils.h: Hugely complex gcc4.0pre fixes.

2005-01-23    <jeff@mini.nerble.net>

	* game.cc (Game): Command-line option --write-xml causes game
	config. to be written to 'patch/exultgame.xml'.
	(Game): If 'patch/exultgame.xml' exists, Exult uses that instead
	of manually adding resources.

2005-01-16    <jeff@mini.nerble.net>

	* shapes/font.cc: Don't skip linefeeds when handling spaces.
	(Needed for notebook, and I hope this doesn't mess up conversations.)

	* gumps/Notebook_gump.cc (Notebook_gump): Working on auto-paging.

2005-01-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* forked_player.cc: fixed execlp call (patch #1101126)

2005-01-13    <jeff@mini.nerble.net>

	* gumps/Notebook_gump.cc (Notebook_gump): Online journal support
	(hit 'n' for 'notebook').

2004-12-29  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: don't let avatar move if right clicking on gump to close it
	  (based on patch #1088000)
	* exult.cc: wait for possible dblclick before showing item info when
	  not in map-edit mode (based on patch #1088157)